--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://unpkg.com/react-bootstrap-typeahead/css/Typeahead.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Chords Viewer</title>
   </head>
   <body>
     <div id="root"></div>
